--- a/Games.html
+++ b/Games.html
@@ -20,6 +20,24 @@
     <!--<script src="JS/2048.js" type="text/javascript"></script>-->
     <!--REACT JS INCOMING-->
     <script type="text/babel">
+        class GameEnum{
+            // a class that dictates the styling of Game
+            constructor(){
+                this.colWidth = "20%"; // use to be 130px
+                this.colSpacing = "1%";
+                this.tilePadding = "23% 0"; // used to be 23% 0
+                this.tileMarginTop = "-20%";
+                this.sectionWidth = "50%";
+                this.sectionHeight = "50%";
+                this.sectionTop = "3%";
+                this.sectionMarginLeft = "25%";
+            }
+
+            adjustStyles(){
+                this.colWidth = "20%";
+            }
+        }
+
         class Board {
             constructor() {
                 this.score_increment = [];
@@ -355,6 +373,8 @@
         }
 
         var grid = new Board();
+        var gameStyles = new GameEnum();
+        gameStyles.adjustStyles();
 
         class Game extends React.Component {
             constructor(props) {
@@ -380,6 +400,7 @@
              Function that takes in a board and updates the values of each tile
              */
             update(board) {
+                gameStyles.adjustStyles();
                 this.setState({tile1: board[0][0]});
                 this.setState({tile2: board[0][1]});
                 this.setState({tile3: board[0][2]});
@@ -453,126 +474,126 @@
             render() {
                 //returns a 4 by 4 grid containing the 2048 grid
                 return (
-                        <div>
+                        <div style={{width:gameStyles.sectionWidth, height: gameStyles.sectionHeight,marginLeft: gameStyles.sectionMarginLeft}}>
                             <div style={{display: "flex", fontSize: "30px", margin: "0 0 0 14%"}}>
 
-                                <div style={{width: "20%", margin: "1%"}}>
+                                <div style={{width: gameStyles.colWidth, margin: gameStyles.colSpacing}}>
                                     <h1 style={{
                                         align: "center",
                                         background: determine_color(this.state.tile1),
                                         color: font_color(this.state.tile1),
-                                        padding: "23% 0"
+                                        padding: gameStyles.tilePadding
                                     }}>{this.state.tile1}</h1>
                                     <h1 style={{
                                         align: "center",
                                         background: determine_color(this.state.tile2),
-                                        padding: "23% 0",
+                                        padding: gameStyles.tilePadding,
                                         color: font_color(this.state.tile2),
-                                        marginTop: "-20%"
+                                        marginTop: gameStyles.tileMarginTop
                                     }}>{this.state.tile2}</h1>
                                     <h1 style={{
                                         align: "center",
                                         background: determine_color(this.state.tile3),
-                                        padding: "23% 0",
+                                        padding: gameStyles.tilePadding,
                                         color: font_color(this.state.tile3),
-                                        marginTop: "-20%"
+                                        marginTop: gameStyles.tileMarginTop
                                     }}>{this.state.tile3}</h1>
                                     <h1 style={{
                                         align: "center",
                                         background: determine_color(this.state.tile4),
-                                        padding: "23% 0",
+                                        padding: gameStyles.tilePadding,
                                         color: font_color(this.state.tile4),
-                                        marginTop: "-20%"
+                                        marginTop: gameStyles.tileMarginTop
                                     }}>{this.state.tile4}</h1>
                                 </div>
 
-                                <div style={{width: "20%", margin: "1%"}}>
+                                <div style={{width: gameStyles.colWidth, margin: gameStyles.colSpacing}}>
                                     <h1 style={{
                                         align: "center",
                                         background: determine_color(this.state.tile5),
                                         color: font_color(this.state.tile5),
-                                        padding: "23% 0"
+                                        padding: gameStyles.tilePadding
                                     }}>{this.state.tile5}</h1>
                                     <h1 style={{
                                         align: "center",
                                         background: determine_color(this.state.tile6),
                                         color: font_color(this.state.tile6),
-                                        padding: "23% 0",
-                                        marginTop: "-20%"
+                                        padding: gameStyles.tilePadding,
+                                        marginTop: gameStyles.tileMarginTop
                                     }}>{this.state.tile6}</h1>
                                     <h1 style={{
                                         align: "center",
                                         background: determine_color(this.state.tile7),
                                         color: font_color(this.state.tile7),
-                                        padding: "23% 0",
-                                        marginTop: "-20%"
+                                        padding: gameStyles.tilePadding,
+                                        marginTop: gameStyles.tileMarginTop
                                     }}>{this.state.tile7}</h1>
                                     <h1 style={{
                                         align: "center",
                                         background: determine_color(this.state.tile8),
                                         color: font_color(this.state.tile8),
-                                        padding: "23% 0",
-                                        marginTop: "-20%"
+                                        padding: gameStyles.tilePadding,
+                                        marginTop: gameStyles.tileMarginTop
                                     }}>{this.state.tile8}</h1>
                                 </div>
 
-                                <div style={{width: "20%", margin: "1%"}}>
+                                <div style={{width: gameStyles.colWidth, margin: gameStyles.colSpacing}}>
                                     <h1 style={{
                                         align: "center",
                                         background: determine_color(this.state.tile9),
                                         color: font_color(this.state.tile9),
-                                        padding: "23% 0"
+                                        padding: gameStyles.tilePadding
                                     }}>{this.state.tile9}</h1>
                                     <h1 style={{
                                         align: "center",
                                         background: determine_color(this.state.tile10),
                                         color: font_color(this.state.tile10),
-                                        padding: "23% 0",
-                                        marginTop: "-20%"
+                                        padding: gameStyles.tilePadding,
+                                        marginTop: gameStyles.tileMarginTop
                                     }}>{this.state.tile10}</h1>
                                     <h1 style={{
                                         align: "center",
                                         background: determine_color(this.state.tile11),
-                                        padding: "23% 0",
+                                        padding: gameStyles.tilePadding,
                                         color: font_color(this.state.tile11),
-                                        marginTop: "-20%"
+                                        marginTop: gameStyles.tileMarginTop
                                     }}>{this.state.tile11}</h1>
                                     <h1 style={{
                                         align: "center",
                                         background: determine_color(this.state.tile12),
                                         color: font_color(this.state.tile12),
-                                        padding: "23% 0",
-                                        marginTop: "-20%"
+                                        padding: gameStyles.tilePadding,
+                                        marginTop: gameStyles.tileMarginTop
                                     }}>{this.state.tile12}</h1>
                                 </div>
 
-                                <div style={{width: "20%", margin: "1%"}}>
+                                <div style={{width: gameStyles.colWidth, margin: gameStyles.colSpacing}}>
                                     <h1 style={{
                                         align: "center",
                                         background: determine_color(this.state.tile13),
                                         color: font_color(this.state.tile13),
-                                        padding: "23% 0"
+                                        padding: gameStyles.tilePadding
                                     }}>{this.state.tile13}</h1>
                                     <h1 style={{
                                         align: "center",
                                         background: determine_color(this.state.tile14),
                                         color: font_color(this.state.tile14),
-                                        padding: "23% 0",
-                                        marginTop: "-20%"
+                                        padding: gameStyles.tilePadding,
+                                        marginTop: gameStyles.tileMarginTop
                                     }}>{this.state.tile14}</h1>
                                     <h1 style={{
                                         align: "center",
                                         background: determine_color(this.state.tile15),
                                         color: font_color(this.state.tile15),
-                                        padding: "23% 0",
-                                        marginTop: "-20%"
+                                        padding: gameStyles.tilePadding,
+                                        marginTop: gameStyles.tileMarginTop
                                     }}>{this.state.tile15}</h1>
                                     <h1 style={{
                                         align: "center",
                                         background: determine_color(this.state.tile16),
                                         color: font_color(this.state.tile16),
-                                        padding: "23% 0",
-                                        marginTop: "-20%"
+                                        padding: gameStyles.tilePadding,
+                                        marginTop: gameStyles.tileMarginTop
                                     }}>{this.state.tile16}</h1>
                                 </div>
                             </div>
