--- a/Games.html
+++ b/Games.html
@@ -20,9 +20,14 @@
     <!--<script src="JS/2048.js" type="text/javascript"></script>-->
     <!--REACT JS INCOMING-->
     <script type="text/babel">
-        class GameEnum{
+        class GameEnum {
             // a class that dictates the styling of Game
-            constructor(){
+            constructor() {
+                this.restoreDefaults();
+            }
+
+            restoreDefaults(){
+                //for the main 2048 Board
                 this.colWidth = "20%"; // use to be 130px
                 this.colSpacing = "1%";
                 this.tilePadding = "23% 0"; // used to be 23% 0
@@ -31,10 +36,84 @@
                 this.sectionHeight = "50%";
                 this.sectionTop = "3%";
                 this.sectionMarginLeft = "25%";
+                this.sectionMarginBot = "0%";
+                this.gameFontSize = "30px";
+
+                //for the scoreboard
+                this.scoreHeight = "20%";
+                this.scoreWidth = "30%";
+                this.scoreMarginLeft = "-30%";
+                this.scoreMarginTop = "-55%";
+                this.scoreColor = "beige";
+
+                //for the buttons
+                this.buttonLeft = "0";
             }
 
-            adjustStyles(){
-                this.colWidth = "20%";
+            //simulating media queries
+            adjustStyles() {
+                //incorporate jQuery into ReactJS
+                let screenWidth = $(window).width();
+                if ( screenWidth < 1250 && screenWidth >= 1105) {
+                    this.tilePadding = "18% 0";
+                    this.colSpacing = "1.4%";
+                    this.scoreMarginTop = "-70%";
+                    this.sectionMarginBot = "25%";
+                } else if (screenWidth < 1105 && screenWidth >= 1000){
+                    this.sectionWidth = "60%";
+                    this.sectionMarginLeft = "20%";
+                    this.sectionMarginBot = "25%";
+                    this.scoreMarginTop = "-60%";
+                    this.scoreMarginLeft = "-25%";
+                } else if (screenWidth < 1000 && screenWidth >= 800){
+                    this.sectionMarginLeft = "15%";
+                    this.sectionWidth = "70%";
+                    this.tilePadding = "18% 0";
+                    this.sectionMarginBot = "27%";
+                    this.scoreMarginTop = "-60%";
+                    this.scoreMarginLeft = "-18%";
+                } else if (screenWidth < 800 && screenWidth >= 700) {
+                    this.sectionMarginLeft = "15%";
+                    this.sectionWidth = "70%";
+                    this.tilePadding = "18% 0";
+                    this.sectionMarginBot = "29%";
+                    this.scoreMarginLeft = "-18%";
+                    this.scoreMarginTop = "-64%";
+                    this.scoreWidth = "25%";
+                } else if (screenWidth < 700 && screenWidth > 600){
+                    this.tilePadding = "18% 0";
+                    this.sectionMarginBot = "37%";
+                    this.scoreMarginLeft = "-10%";
+                    this.scoreMarginTop = "-68%";
+                    this.scoreWidth = "22%";
+                    this.gameFontSize = "25px";
+                    this.sectionWidth = "80%";
+                    this.sectionMarginLeft = "10%";
+                } else if (screenWidth < 600 && screenWidth >= 430) {
+                    this.tilePadding = "18% 0";
+                    this.sectionMarginBot = "-10%";
+                    this.scoreMarginLeft = "34%";
+                    this.scoreMarginTop = "0";
+                    this.scoreWidth = "40%";
+                    this.gameFontSize = "25px";
+                    this.sectionWidth = "95%";
+                    this.sectionMarginLeft = "-3%";
+                    this.colWidth = "22%";
+                    this.buttonLeft = "10%";
+                } else if (screenWidth < 430) {
+                    this.tilePadding = "15% 0";
+                    this.sectionMarginBot = "-10%";
+                    this.scoreMarginLeft = "35%";
+                    this.scoreMarginTop = "0";
+                    this.scoreWidth = "40%";
+                    this.gameFontSize = "20px";
+                    this.sectionWidth = "95%";
+                    this.sectionMarginLeft = "-3%";
+                    this.colWidth = "22%";
+                    this.buttonLeft = "10%";
+                } else {
+                    this.restoreDefaults();
+                }
             }
         }
 
@@ -44,7 +123,7 @@
                 this.score = 0;
                 this.empty_spots = [];
                 this.history = [];
-                this.prev = [[0,0,0,0],[0,0,0,0],[0,0,0,0],[0,0,0,0]];
+                this.prev = [[0, 0, 0, 0], [0, 0, 0, 0], [0, 0, 0, 0], [0, 0, 0, 0]];
                 this.grid = []; // main data structure representation
                 for (let i = 0; i < 4; ++i) {
                     let row = [];
@@ -64,8 +143,8 @@
                 this.grid[i][j] = val;
             }
 
-            push_to_scores (sc){
-                if (this.score_increment.length < 10){
+            push_to_scores(sc) {
+                if (this.score_increment.length < 10) {
                     this.score_increment.push(sc);
                 } else {
                     this.score_increment.shift();
@@ -148,7 +227,7 @@
                 }
             }
 
-            get_score(){
+            get_score() {
                 return this.score;
             }
 
@@ -309,13 +388,13 @@
             }
 
             game_over() { //algorithm's correct
-                if(this.empty_spots.length !== 0){
+                if (this.empty_spots.length !== 0) {
                     return false;
                 }
                 //vertical check
                 for (var k = 0; k < this.grid.length; ++k) {
                     for (var i = 1; i < this.grid.length; ++i) {
-                        if (this.grid[i][k] === this.grid[i - 1][k]){
+                        if (this.grid[i][k] === this.grid[i - 1][k]) {
                             return false;
                         }
                     }
@@ -324,10 +403,10 @@
                 //horizontal check
                 for (var x = 0; x < this.grid.length; ++x) {
                     for (var j = 1; j < this.grid[x].length; ++j) {
-                        if (this.grid[x][j] === 0){
+                        if (this.grid[x][j] === 0) {
                             return false;
                         }
-                        if (this.grid[x][j] === board[x][j - 1]){
+                        if (this.grid[x][j] === board[x][j - 1]) {
                             return false;
                         }
                     }
@@ -418,14 +497,14 @@
                 this.setState({tile15: board[3][2]});
                 this.setState({tile16: board[3][3]});
                 this.setState({scores: grid.get_score()});
-                this.setState({hist_num : grid.history.length});
+                this.setState({hist_num: grid.history.length});
             }
 
             rand_gen() {
                 grid.set_reverse();
                 grid.random_generate();
                 this.update(grid.get_board());
-                if (grid.game_over()){
+                if (grid.game_over()) {
                     alert("GAME OVER. PLEASE RELOAD THIS PAGE TO RESTART");
                 }
             }
@@ -434,7 +513,7 @@
                 grid.set_reverse();
                 grid.move_up();
                 this.update(grid.get_board());
-                if (grid.game_over()){
+                if (grid.game_over()) {
                     alert("GAME OVER. PLEASE RELOAD THIS PAGE TO RESTART");
                 }
             }
@@ -443,7 +522,7 @@
                 grid.set_reverse();
                 grid.move_down();
                 this.update(grid.get_board());
-                if (grid.game_over()){
+                if (grid.game_over()) {
                     alert("GAME OVER. PLEASE RELOAD THIS PAGE TO RESTART");
                 }
             }
@@ -452,7 +531,7 @@
                 grid.set_reverse();
                 grid.move_left();
                 this.update(grid.get_board());
-                if (grid.game_over()){
+                if (grid.game_over()) {
                     alert("GAME OVER. PLEASE RELOAD THIS PAGE TO RESTART");
                 }
             }
@@ -461,7 +540,7 @@
                 grid.set_reverse();
                 grid.move_right();
                 this.update(grid.get_board());
-                if (grid.game_over()){
+                if (grid.game_over()) {
                     alert("GAME OVER. PLEASE RELOAD THIS PAGE TO RESTART");
                 }
             }
@@ -474,8 +553,13 @@
             render() {
                 //returns a 4 by 4 grid containing the 2048 grid
                 return (
-                        <div style={{width:gameStyles.sectionWidth, height: gameStyles.sectionHeight,marginLeft: gameStyles.sectionMarginLeft}}>
-                            <div style={{display: "flex", fontSize: "30px", margin: "0 0 0 14%"}}>
+                        <div style={{
+                            width: gameStyles.sectionWidth,
+                            height: gameStyles.sectionHeight,
+                            marginLeft: gameStyles.sectionMarginLeft,
+                            marginBottom: gameStyles.sectionMarginBot
+                        }}>
+                            <div style={{display: "flex", fontSize: gameStyles.gameFontSize, margin: "0 0 0 14%"}}>
 
                                 <div style={{width: gameStyles.colWidth, margin: gameStyles.colSpacing}}>
                                     <h1 style={{
@@ -598,7 +682,7 @@
                                 </div>
                             </div>
                             {/*<h1 style={{textAlign: "center", marginTop: "-5%"}}> {grid.print_prev()}</h1>*/}
-                            <div style={{marginTop: "-2%"}}>
+                            <div style={{marginTop: "-2%", marginLeft: gameStyles.buttonLeft}}>
                                 {/*<button onClick={this.reverse_game}>Reverse</button>*/}
                                 <button onClick={this.rand_gen}>Random Generate</button>
                                 <button onClick={this.up}>Move up</button>
@@ -606,8 +690,12 @@
                                 <button onClick={this.right}>Move Right</button>
                                 <button onClick={this.down}>Move Down</button>
                             </div>
-                            <div style={{height:"20%", width:"30%",background:"beige", marginLeft:"-30%",marginTop:"-55%", zIndex:"3"}}>
-                                <h1 style={{paddingTop:"5%"}}>Score</h1>
+                            <div style={{
+                                height: gameStyles.scoreHeight, width: gameStyles.scoreWidth,
+                                background: gameStyles.scoreColor, marginLeft: gameStyles.scoreMarginLeft,
+                                marginTop: gameStyles.scoreMarginTop, zIndex: "3"
+                            }}>
+                                <h1 style={{paddingTop: "5%"}}>Score</h1>
                                 <h1>{this.state.scores}</h1>
                             </div>
                         </div>
@@ -646,7 +734,7 @@
 </div>
 
 <div id="top_mobile_nav">
-    <img id="navicon" src="Images/navicon.png" height="50px" width="50px" >
+    <img id="navicon" src="Images/navicon.png" height="50px" width="50px">
 </div>
 
 <ul id="mobile_nav">
@@ -678,7 +766,7 @@
 </div>
 
 <!--<div id="footer" class="_center">-->
-    <!--<h4> &copy; JING WEI LI 2017. Proudly Created from Scratch Using ReactJS</h4>-->
+<!--<h4> &copy; JING WEI LI 2017. Proudly Created from Scratch Using ReactJS</h4>-->
 <!--</div>-->
 <div id="footer_container" style="margin-top: 20%">
 
@@ -713,9 +801,11 @@
                 <ul>
                     <li><h4>DESIGNS</h4></li>
                     <li><a href="https://www.behance.net/gallery/47281675/2026-Time-Capsule">Time Capsule</a></li>
-                    <li><a href="https://www.behance.net/gallery/52343049/RPI-Class-of-2021-Sticker-Design">2021 Stickers</a></li>
+                    <li><a href="https://www.behance.net/gallery/52343049/RPI-Class-of-2021-Sticker-Design">2021
+                        Stickers</a></li>
                     <li><a href=Regular_Art.html>Regular Art</a></li>
-                    <li><a href=https://www.behance.net/gallery/47687973/Robotics-Recruitment-Poster>Robotcs Poster</a></li>
+                    <li><a href=https://www.behance.net/gallery/47687973/Robotics-Recruitment-Poster>Robotcs Poster</a>
+                    </li>
                     <li><a href="https://www.behance.net/MrProLi">Behance</a></li>
                     <li><a href="https://www.flickr.com/photos/154270674@N02/">Flickr</a></li>
                 </ul>
@@ -738,7 +828,8 @@
         <img src="Images/PersonalLogo.png">
     </div>
 </div>
-<h4 id="standalone_footer" style="text-align: center; margin: 3% 5%"> &copy; JING WEI LI 2017. Proudly Created from Scratch Using ReactJS</h4>
+<h4 id="standalone_footer" style="text-align: center; margin: 3% 5%"> &copy; JING WEI LI 2017. Proudly Created from
+    Scratch Using ReactJS</h4>
 
 </body>
 </html>
