Updated Resume & Better NMN Description

--- a/Resume.html
+++ b/Resume.html
@@ -69,7 +69,7 @@
 
 <div id="intro">
     <h1> Welcome to My Digital Resume</h1>
-    <a href="ResumeJuly17.pdf">or visit the standard resume</a>
+    <a href="ResumeSept17.pdf">or visit the standard resume</a>
 </div>
 
 <div id="quick_guide">
@@ -171,7 +171,8 @@
                 <h2>BILINGUAL CUSTOMER SERVICE REPRESENTATIVE</h2>
                 <h3>SUMMER 2017, NATIONAL MEDTRANS NETWORK</h3>
                 <h4>
-                    • Assist customers with their inquiries, resolve complaints, and settle grievances.<br/>
+                    • 	Customer service representative working between members, transportation providers, and health
+                    insurances to schedule trips to doctor's visits, using the MXIE software and a web app. <br/>
                     • Schedule transportation for patients in order to get them to the medical facilities safely.<br/>
                     • Gained exceptional communications skills as well as experiences in the service industry.
                 </h4>
