Added Apple-styled Footer for Mobile

--- a/index.html
+++ b/index.html
@@ -113,48 +113,56 @@
             <img style="margin-top: 18px" src="Images/PersonalLogo.png">
         </div>
         <div id="section1">
-            <div id="navigation">
+                <div id="navigation">
                 <ul>
-                    <li><h4>PAGES</h4></li>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="Bio.html">About</a></li>
-                    <li><a href="Resume.html">Resume</a></li>
-                    <li><a href="Graphic%20Design.html">Graphic Design </a></li>
-                    <li><a href="Games.html">Games</a></li>
-                    <li><a href="Contacts.html">Contact Me</a></li>
+                    <li><h4>Pages</h4></li>
+                    <div class="slideContents">
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="Bio.html">About</a></li>
+                        <li><a href="Resume.html">Resume</a></li>
+                        <li><a href="Graphic%20Design.html">Graphic Design </a></li>
+                        <li><a href="Games.html">Games</a></li>
+                        <li><a href="Contacts.html">Contact Me</a></li>
+                    </div>
                 </ul>
             </div>
             <div id="projects_footer">
                 <ul>
-                    <li><h4>PROJECTS</h4></li>
-                    <li><a href="Projects.html">All Projects</a></li>
-                    <li><a href="Games.html">2048 Game</a></li>
-                    <li><a href="proj_frc.html">FIRST Robotics</a></li>
-                    <li><a href="index.html">Personal Website</a></li>
+                    <li><h4>Projects</h4></li>
+                    <div class="slideContents">
+                        <li><a href="Projects.html">All Projects</a></li>
+                        <li><a href="Games.html">2048 Game</a></li>
+                        <li><a href="proj_frc.html">FIRST Robotics</a></li>
+                        <li><a href="index.html">Personal Website</a></li>
+                    </div>
                 </ul>
             </div>
         </div>
         <div id="section2">
             <div id="graphics_footer">
                 <ul>
-                    <li><h4>DESIGNS</h4></li>
-                    <li><a href="https://www.behance.net/gallery/47281675/2026-Time-Capsule">Time Capsule</a></li>
-                    <li><a href="https://www.behance.net/gallery/52343049/RPI-Class-of-2021-Sticker-Design">2021 Stickers</a></li>
-                    <li><a href=Regular_Art.html>Regular Art</a></li>
-                    <li><a href=https://www.behance.net/gallery/47687973/Robotics-Recruitment-Poster>Robotcs Poster</a></li>
-                    <li><a href="https://www.behance.net/MrProLi">Behance</a></li>
-                    <li><a href="https://www.flickr.com/photos/154270674@N02/">Flickr</a></li>
+                    <li><h4>Designs</h4></li>
+                    <div class="slideContents">
+                        <li><a href="https://www.behance.net/gallery/47281675/2026-Time-Capsule">Time Capsule</a></li>
+                        <li><a href="https://www.behance.net/gallery/52343049/RPI-Class-of-2021-Sticker-Design">2021 Stickers</a></li>
+                        <li><a href=Regular_Art.html>Regular Art</a></li>
+                        <li><a href=https://www.behance.net/gallery/47687973/Robotics-Recruitment-Poster>Robotcs Poster</a></li>
+                        <li><a href="https://www.behance.net/MrProLi">Behance</a></li>
+                        <li><a href="https://www.flickr.com/photos/154270674@N02/">Flickr</a></li>
+                    </div>
                 </ul>
             </div>
             <div id="social_media_footer">
                 <ul>
-                    <li><h4>SOCIAL</h4></li>
-                    <li><a href="https://www.facebook.com/li.jingwei.94">Facebook</a></li>
-                    <li><a href="https://www.instagram.com/ljw980105">Instagram</a></li>
-                    <li><a href="https://www.linkedin.com/in/jingweili2/">LinkedIn</a></li>
-                    <li><a href="https://twitter.com/MrProLi">Twitter</a></li>
-                    <li><a href="https://www.youtube.com/channel/UC33WP6-Af8Oy7SGzZm5mxng">Youtube</a></li>
-                    <li><a href="https://github.com/ljw980105/">GitHub</a></li>
+                    <li><h4>Social</h4></li>
+                    <div class="slideContents">
+                        <li><a href="https://www.facebook.com/li.jingwei.94">Facebook</a></li>
+                        <li><a href="https://www.instagram.com/ljw980105">Instagram</a></li>
+                        <li><a href="https://www.linkedin.com/in/jingweili2/">LinkedIn</a></li>
+                        <li><a href="https://twitter.com/MrProLi">Twitter</a></li>
+                        <li><a href="https://www.youtube.com/channel/UC33WP6-Af8Oy7SGzZm5mxng">Youtube</a></li>
+                        <li><a href="https://github.com/ljw980105/">GitHub</a></li>
+                    </div>
                 </ul>
             </div>
         </div>
