Replaced Sepia w/ Zoom in GFX; Smooth Blur Added

--- a/Graphic Design.html
+++ b/Graphic Design.html
@@ -68,18 +68,18 @@
 
     <div id="col1">
         <div id="img1" class="imgContainer">
-            <img src="Images/graphics1.jpg">
+            <img class="smooth_blur" src="Images/graphics1.jpg">
             <a class="shadow" href="https://www.behance.net/gallery/47281675/2026-Time-Capsule">Featured Project <br /> 2026 Time Capsule</a>
         </div>
 
         <div id="img4" class="imgContainer">
-            <img src="Images/graphics3.jpg">
+            <img class="smooth_blur" src="Images/graphics3.jpg">
             <a class="shadow" href="https://www.behance.net/gallery/47687973/Robotics-Recruitment-Poster">Robotics Poster</a>
         </div>
     </div>
     <div id="col2">
         <div id="img2" class="imgContainer">
-            <img src="Images/graphics2.jpg">
+            <img class="smooth_blur" src="Images/graphics2.jpg">
             <a class="shadow" href=Regular_Art.html>Regular Art</a>
         </div>
 
@@ -89,7 +89,7 @@
     </div>
     <div id="col3">
         <div id="img3" class="imgContainer">
-            <img src="Images/gfx2.png">
+            <img class="smooth_blur" src="Images/gfx2.png">
             <a class="shadow" href=https://www.behance.net/gallery/52343049/RPI-Class-of-2021-Sticker-Design>2021 Class <br /> Stickers</a>
         </div>
 
