--- a/Resume.html
+++ b/Resume.html
@@ -69,7 +69,7 @@
 
 <div id="intro">
     <h1> Welcome to My Digital Resume</h1>
-    <a href="ResumeSept17.pdf">or visit the standard resume</a>
+    <a href="ResumeSept17Vol2.pdf">or visit the standard resume</a>
 </div>
 
 <div id="quick_guide">
