--- a/Graphic Design.html
+++ b/Graphic Design.html
@@ -67,7 +67,7 @@
     </div>
 
     <div id="col1">
-        <div id="img1" class="imgContainer">
+        <div id="img1" class="imgContainer marg-bottom">
             <img class="smooth_blur" src="Images/graphics1.jpg">
             <a class="shadow" href="https://www.behance.net/gallery/47281675/2026-Time-Capsule">Featured Project <br /> 2026 Time Capsule</a>
         </div>
@@ -78,9 +78,14 @@
         </div>
     </div>
     <div id="col2">
-        <div id="img2" class="imgContainer">
+        <div id="img2" class="imgContainer marg-bottom">
             <img class="smooth_blur" src="Images/graphics2.jpg">
             <a class="shadow" href=Regular_Art.html>Regular Art</a>
+        </div>
+
+        <div id="tapeFace" class="imgContainer marg-bottom gfxCommon">
+            <img id="tapeImg" class="smooth_blur" src="Images/tape_face.jpg">
+            <a id="tapeFaceAnchor" class="shadow" href=https://www.behance.net/gallery/57032339/Tape-Face-Live>Tape Face Live</a>
         </div>
 
         <div id="behance">
@@ -88,9 +93,14 @@
         </div>
     </div>
     <div id="col3">
-        <div id="img3" class="imgContainer">
+        <div id="img3" class="imgContainer marg-bottom">
             <img class="smooth_blur" src="Images/gfx2.png">
             <a class="shadow" href=https://www.behance.net/gallery/52343049/RPI-Class-of-2021-Sticker-Design>2021 Class <br /> Stickers</a>
+        </div>
+
+        <div id="gotg" class="imgContainer marg-bottom gfxCommon">
+            <img class="smooth_blur" src="Images/GOTG.jpg">
+            <a id="gotgAnchor" class="shadow" href=https://www.behance.net/gallery/57032327/Guardian-of-the-Galaxy-Poster-Design>Guardians of the Galaxy</a>
         </div>
 
         <div id="flickr">
